apps/prod/hasher-patch.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: hasher
spec:
  replicas: 1
