apps/prod/redis-patch.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: redis

spec:
  replicas: 1
