apps/prod/webui-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui 
spec:
  replicas: 1
