apps/prod/webui-service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: webui 
spec:
  selector:
    app: webui 
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
